<resources>
    <!--Every Name-->
    <string name="app_name">Every</string>

    <!--SignInActivity-->
    <string name="welcome_textView">환영합니다!</string>
    <string name="introduce_textView">로그인하시고 Every를 통해 다양한 편리함을 느껴보세요!</string>
    <string name="lostPassWord_textView">비밀번호를 잊으셨나요?</string>
    <string name="signUp_textView">회원가입</string>

    <!--SignUpActivity-->
    <string name="beforeSignUp_textView">회원가입 하기에 앞서</string>
    <string name="chooseIdentity_textView">당신의 신분을 선택해주세요!</string>
    <string name="student_textView">학생</string>
    <string name="studentAge_textView">만 7세 ~ 18세</string>
    <string name="worker_textView">대학생 및 직장인</string>
    <string name="workerAge_textView">만 19세 이상</string>

    <!--SignUpDataActivity-->
    <string name="userInfo_textView">회원 정보</string>

    <!--Email_PasswordSignUpActivity-->
    <string name="emailPassword_textView">이메일과 비밀번호</string>
    <string name="usesEmail_textView">입력하신 이메일은 아이디로 사용됩니다!</string>

    <!--Name_BirthSignUpActivity-->
    <string name="nameBirth_textView">이름과 태어난 년도</string>
    <string name="birthFour_textView">태어난 년도 4자리를 입력해주세요!</string>

    <!--PhoneSignUpActivity-->
    <string name="phone_textView">전화번호</string>
    <string name="communityPeople_textView">사람들과 소통의 수단으로 사용합니다!</string>

    <!--SchoolSignUpActivity-->
    <string name="schoolInfo_textView">학교 정보</string>
    <string name="nowSchool_textView">현재 재학중이신 학교를 선택해주세요!</string>

    <!--WorkerSignUpActivity-->
    <string name="workerName_textView">근무 직장과 근무 직종</string>
    <string name="universityStudent_textView">대학생일 경우 대학교의 이름과 재학중인\n학과를 대신해 적어주세요!</string>

    <!--StudentHomeFragment-->
    <string name="todaySchedule_textView">오늘의 일정</string>
    <string name="todayBamboo_textView">오늘의 대나무숲 인기 게시글을</string>
    <string name="check_textView">확인하세요!</string>
    <string name="todayMeals_textView">오늘의 급식</string>

    <!--StudentBambooFragment-->
    <string name="bambooName_textView">대나무숲</string>
    <string name="bambooIntroduce_textView">여러분의 이야기를 자유롭게 써보세요!</string>

    <!--BambooPostActivity-->
    <string name="postArticle_textView">글 작성하기</string>
    <string name="share_textView">공유</string>
    <string name="anonymous_textView">익명</string>
    <string name="image_textView">사진/동영상 추가</string>

    <!--BambooCommentActivity-->
    <string name="post_textView">게시</string>

    <!--BambooMoreActivity-->
    <string name="editComment_textView">댓글 수정하기</string>
    <string name="deleteComment_textView">댓글 삭제하기</string>

    <!--BambooCommentEditActivity-->
    <string name="edit_textView">수정</string>

    <!--StudentScheduleFragment-->
    <string name="scheduleName_textView">스케줄</string>
    <string name="scheduleIntroduce_textView">여러분의 소중한 일정을 관리하세요!</string>

    <!--SchedulePostActivity-->
    <string name="postSchedule_textView">일정 추가하기</string>
    <string name="scheduleTitle_textView">일정 제목</string>
    <string name="scheduleContent_textView">일정 내용</string>
    <string name="scheduleStartDate_textView">일정 시작 날짜</string>
    <string name="scheduleEndDate_textView">일정 종료 날짜</string>

    <!--ScheduleContentActivity-->
    <string name="scheduleEdit_textView">일정 수정하기</string>
    
    <!--StudentMoreFragment-->
    <string name="moreName_textView">더보기</string>
    <string name="newEvery_textView">Every의 새로운 기능</string>
    <string name="show_textView">확인하세요!</string>
    <string name="afterTime_textView">추후에 공개될\n예정입니다!</string>

    <!--StudentAccountActivity-->
    <string name="profileName_textView">프로필</string>
    <string name="logout_textView">로그아웃</string>
</resources>
