<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.project.every.viewmodel.student.activity.bamboo.BambooCommentEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.student.activity.bamboo.BambooPostActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:background="#EEEEEE">

            <TextView
                android:id="@+id/editComment_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editComment_textView"
                android:fontFamily="@font/nanum_bold"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/edit_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_textView"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:fontFamily="@font/nanum_bold"
                android:textColor="#7E40FF"
                android:layout_marginRight="20dp"
                android:onClick="@{() -> viewModel.editComment()}"/>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nanum_regular"
                    android:hint="글을 작성해주세요!"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    android:text="@={viewModel.comment_EditText}"
                    android:maxLength="250"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="0.0001"
            android:background="@drawable/image_video_background"
            android:gravity="center"
            android:onClick="@{() -> viewModel.addImage()}"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:onClick="@{() -> viewModel.addImage()}"
                app:srcCompat="@drawable/photo" />

            <TextView
                android:id="@+id/image_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:fontFamily="@font/nanum_bold"
                android:onClick="@{() -> viewModel.addImage()}"
                android:text="@string/image_textView"
                android:textSize="11sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>
</layout>