<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.every.viewmodel.student.activity.schedule.SchedulePostViewModel" />
    </data>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.student.activity.schedule.SchedulePostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:textColor="#000000"
            android:layout_gravity="center"
            android:id="@+id/postSchedule_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postSchedule_textView"
            android:fontFamily="@font/nanum_bold"
            android:textSize="15sp"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:textColor="#2D008A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleTitle_textView"
            android:layout_margin="5dp"
            android:id="@+id/scheduleTitle_textView"
            android:fontFamily="@font/nanum_extrabold"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="5dp">

            <EditText
                android:maxLength="15"
                android:padding="10dp"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/nanum_regular"
                android:hint="일정 제목을 입력해주세요."
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:text="@={viewModel.title}"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:textColor="#2D008A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleContent_textView"
            android:layout_margin="5dp"
            android:id="@+id/scheduleContent_textView"
            android:fontFamily="@font/nanum_extrabold"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="5dp">

            <EditText
                android:maxLength="150"
                android:text="@={viewModel.content}"
                android:padding="10dp"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/nanum_regular"
                android:hint="일정에 관한 세부적인 내용을 입력해주세요."
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:textColor="#2D008A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleStartDate_textView"
            android:layout_margin="5dp"
            android:id="@+id/scheduleStartDate_textView"
            android:fontFamily="@font/nanum_extrabold"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="55dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:onClick="@{() -> viewModel.chooseDate(0)}">

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nanum_extrabold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@={viewModel.start_date}"
                    android:textColor="#2D008A"
                    android:layout_weight="1"/>
                
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/next"
                    android:tint="#2D008A"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:textColor="#2D008A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleEndDate_textView"
            android:id="@+id/scheduleEndDate_textView"
            android:layout_margin="5dp"
            android:fontFamily="@font/nanum_extrabold"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="55dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:onClick="@{() -> viewModel.chooseDate(1)}">

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nanum_extrabold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@={viewModel.end_date}"
                    android:textColor="#2D008A"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/next"
                    android:tint="#2D008A"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardCornerRadius="25dp"
        android:layout_margin="30dp"
        android:elevation="10dp">

        <Button
            android:enabled="false"
            android:id="@+id/post_button"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/postSchedule_textView"
            android:fontFamily="@font/nanum_extrabold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.postSchedule()}"/>

    </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>