<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.project.every.viewmodel.student.fragment.StudentMoreFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.student.fragment.more.StudentMoreFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/moreName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nanum_extrabold"
            android:text="@string/moreName_textView"
            android:textColor="#2D008A"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:onClick="@{() -> viewModel.onNextEvent()}">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/studentName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_bold"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/studentEmail_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/nanum_regular"
                    android:textSize="14sp"
                    android:textColor="#9F9F9F"/>
            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:src="@drawable/setting"
                android:onClick="@{() -> viewModel.onNextEvent()}"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:onClick="@{() -> viewModel.onUpdateEvent()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/newEvery_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_extrabold"
                        android:text="@string/newEvery_textView"
                        android:textColor="#2D008A"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/show_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/nanum_extrabold"
                        android:text="@string/show_textView"
                        android:textColor="#2D008A"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/every_logo2" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#220067"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/afterTime_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/nanum_extrabold"
                        android:text="@string/afterTime_textView"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/imageView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:src="@drawable/developer" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="10dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorSelectedColor="#2D008A"
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>
         </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>

